[gd_scene load_steps=20 format=2]

[ext_resource path="res://scenes/ui_components/tool_item/Tool_Item.tscn" type="PackedScene" id=1]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_measurements.svg" type="Texture" id=2]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_rotate.svg" type="Texture" id=3]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_modeler.svg" type="Texture" id=4]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_pen.svg" type="Texture" id=5]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_grab.svg" type="Texture" id=6]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_teleport.svg" type="Texture" id=7]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_erase.svg" type="Texture" id=8]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_move.svg" type="Texture" id=9]
[ext_resource path="res://assets/icons/vr_tool_icons/tool_texture_paint.svg" type="Texture" id=10]
[ext_resource path="res://assets/themes/ui_theme_dark.tres" type="Theme" id=11]
[ext_resource path="res://scenes/ui/tools_menu/tools_menu.gd" type="Script" id=12]
[ext_resource path="res://assets/icons/vr_tool_icons/WorldEnvironment.svg" type="Texture" id=13]
[ext_resource path="res://scripts/settings/VRToolItemEnabler.gd" type="Script" id=14]
[ext_resource path="res://assets/icons/vr_tool_icons/arrow_left.svg" type="Texture" id=15]
[ext_resource path="res://assets/icons/vr_tool_icons/arrow_right.svg" type="Texture" id=16]
[ext_resource path="res://assets/icons/vr_tool_icons/arrow_down.svg" type="Texture" id=17]
[ext_resource path="res://assets/icons/vr_tool_icons/arrow_up.svg" type="Texture" id=18]
[ext_resource path="res://scenes/ui_components/tool_shortcut/Tool_Shortcut.tscn" type="PackedScene" id=19]

[node name="Tools_Menu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 11 )
script = ExtResource( 12 )

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 172.0
margin_top = 188.0
margin_right = 1128.0
margin_bottom = 412.0
size_flags_horizontal = 0
size_flags_vertical = 4

[node name="tools_panel" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_right = 956.0
margin_bottom = 212.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="PanelContainer" type="PanelContainer" parent="CenterContainer/VBoxContainer/tools_panel"]
margin_right = 108.0
margin_bottom = 212.0
size_flags_horizontal = 4
size_flags_vertical = 0

[node name="HBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 104.0
margin_bottom = 208.0
size_flags_horizontal = 7
size_flags_vertical = 2

[node name="GLOBAL_SKY" type="Control" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer"]
margin_right = 100.0
margin_bottom = 100.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY"]
margin_left = 2.0
margin_top = 2.0
margin_right = 98.0
margin_bottom = 98.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button/VBoxContainer"]
margin_right = 96.0
margin_bottom = 77.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button/VBoxContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 92.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 13 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button/VBoxContainer"]
margin_top = 81.0
margin_right = 96.0
margin_bottom = 96.0
text = "Arri√®re Plan"
align = 1
valign = 1
clip_text = true

[node name="GLOBAL_TEXTURE" type="Control" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer"]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
rect_min_size = Vector2( 100, 100 )
size_flags_horizontal = 6
size_flags_vertical = 6

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE"]
margin_left = 2.0
margin_top = 2.0
margin_right = 98.0
margin_bottom = 98.0
size_flags_horizontal = 7
size_flags_vertical = 7

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button"]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button/VBoxContainer"]
margin_right = 96.0
margin_bottom = 77.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/margin_right = 4
custom_constants/margin_top = 4
custom_constants/margin_left = 4
custom_constants/margin_bottom = 0

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button/VBoxContainer/MarginContainer"]
margin_left = 4.0
margin_top = 4.0
margin_right = 92.0
margin_bottom = 77.0
size_flags_horizontal = 3
size_flags_vertical = 3
texture = ExtResource( 10 )
expand = true
stretch_mode = 6

[node name="Label" type="Label" parent="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button/VBoxContainer"]
margin_top = 81.0
margin_right = 96.0
margin_bottom = 96.0
text = "Global Texture"
align = 1
valign = 1
clip_text = true

[node name="panel_tools" type="PanelContainer" parent="CenterContainer/VBoxContainer/tools_panel"]
margin_left = 112.0
margin_right = 636.0
margin_bottom = 212.0
size_flags_horizontal = 0
size_flags_vertical = 0

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools"]
margin_left = 4.0
margin_top = 4.0
margin_right = 520.0
margin_bottom = 208.0

[node name="HFlowContainer" type="GridContainer" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer"]
margin_right = 516.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3
columns = 5

[node name="TOOL_TELEPORT" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
margin_right = 100.0
margin_bottom = 100.0
target_tool_name = "TOOL_TELEPORT"
tool_icon = ExtResource( 7 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_TELEPORT"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_teleport"

[node name="TOOL_PEN" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 100.0
target_tool_name = "TOOL_PEN"
tool_icon = ExtResource( 5 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_PEN"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_pen"

[node name="TOOL_ERASER" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
margin_left = 208.0
margin_right = 308.0
margin_bottom = 100.0
target_tool_name = "TOOL_ERASER"
tool_icon = ExtResource( 8 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_ERASER"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_eraser"

[node name="TOOL_GRAB" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
margin_left = 312.0
margin_right = 412.0
margin_bottom = 100.0
target_tool_name = "TOOL_GRAB"
tool_icon = ExtResource( 6 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_GRAB"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_grab"

[node name="TOOL_MOVE" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
margin_left = 416.0
margin_right = 516.0
margin_bottom = 100.0
target_tool_name = "TOOL_MOVE"
tool_icon = ExtResource( 9 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_MOVE"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_move"

[node name="TOOL_ROTATE" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
target_tool_name = "TOOL_ROTATE"
tool_icon = ExtResource( 3 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_ROTATE"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_rotate"

[node name="TOOL_MODELER" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
margin_left = 104.0
margin_top = 104.0
margin_right = 204.0
margin_bottom = 204.0
target_tool_name = "TOOL_MODELER"
tool_icon = ExtResource( 4 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_MODELER"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_modeler"

[node name="TOOL_MATERIAL_PAINT" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
margin_left = 208.0
margin_top = 104.0
margin_right = 308.0
margin_bottom = 204.0
target_tool_name = "TOOL_MATERIAL_PAINT"
tool_icon = ExtResource( 10 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_MATERIAL_PAINT"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_material_painter"

[node name="TOOL_MEASUREMENT" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer" instance=ExtResource( 1 )]
margin_left = 312.0
margin_top = 104.0
margin_right = 412.0
margin_bottom = 204.0
target_tool_name = "TOOL_MEASUREMENT"
tool_icon = ExtResource( 2 )

[node name="DebugEnabler" type="Node" parent="CenterContainer/VBoxContainer/tools_panel/panel_tools/VBoxContainer/HFlowContainer/TOOL_MEASUREMENT"]
script = ExtResource( 14 )
linked_debug_settings = "enable_tool_measurements"

[node name="panel_shortcuts" type="PanelContainer" parent="CenterContainer/VBoxContainer/tools_panel"]
margin_left = 640.0
margin_right = 956.0
margin_bottom = 212.0
size_flags_vertical = 0

[node name="HBoxContainer" type="HBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts"]
margin_left = 4.0
margin_top = 4.0
margin_right = 312.0
margin_bottom = 208.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tool_Shortcut_Left" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts/HBoxContainer" instance=ExtResource( 19 )]
margin_top = 52.0
margin_right = 100.0
margin_bottom = 152.0
shortcut_direction = 2
arrow_icon = ExtResource( 15 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts/HBoxContainer"]
margin_left = 104.0
margin_right = 204.0
margin_bottom = 204.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Tool_Shortcut_Up" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts/HBoxContainer/VBoxContainer" instance=ExtResource( 19 )]
margin_right = 100.0
margin_bottom = 100.0
arrow_icon = ExtResource( 18 )

[node name="Tool_Shortcut_Down" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts/HBoxContainer/VBoxContainer" instance=ExtResource( 19 )]
margin_top = 104.0
margin_right = 100.0
margin_bottom = 204.0
shortcut_direction = 1
arrow_icon = ExtResource( 17 )

[node name="Tool_Shortcut_Right" parent="CenterContainer/VBoxContainer/tools_panel/panel_shortcuts/HBoxContainer" instance=ExtResource( 19 )]
margin_left = 208.0
margin_top = 52.0
margin_right = 308.0
margin_bottom = 152.0
shortcut_direction = 3
arrow_icon = ExtResource( 16 )

[node name="tool_menus" type="HBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 216.0
margin_right = 956.0
margin_bottom = 224.0
size_flags_horizontal = 5
custom_constants/separation = 32
alignment = 1

[node name="main_menu" type="PanelContainer" parent="CenterContainer/VBoxContainer/tool_menus"]
margin_left = 454.0
margin_right = 462.0
margin_bottom = 8.0
size_flags_horizontal = 4
size_flags_vertical = 4

[node name="sub_menu" type="PanelContainer" parent="CenterContainer/VBoxContainer/tool_menus"]
margin_left = 494.0
margin_right = 502.0
margin_bottom = 8.0
size_flags_horizontal = 4
size_flags_vertical = 4

[connection signal="pressed" from="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_SKY/Button" to="." method="switch_hdri"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/tools_panel/PanelContainer/HBoxContainer/GLOBAL_TEXTURE/Button" to="." method="switch_global_material"]
